
@startuml
!include https://raw.githubusercontent.com/patrik-csak/one-dark-plantuml-theme/v1.0.1/theme.puml

hide circle
hide empty members
skinparam {
    classAttributeIconSize 0
    packageStyle rectangle
    linetype ortho
  ' Pink background just to have easy detection if transparency works.
  backgroundColor #pink 
  StateBackgroundColor transparent
}  






skinparam classAttributeIconSize 0
hide circle
hide empty methods

DiscoKugel --|> Circle
Leuchtstab --|> Line
Circle --|> Shapes
Line --|> Shapes
Rectangle --|> Shapes
xxx --|> Shapes


class Leuchtstab {
    + Leuchtstab(double x, double y)
    + void act()
}

class DiscoKugel {
    + DiscoKugel(double x, double y)
    + void act()
}

class Shapes {
    + void act()
    + void move(double dx, double dy)
    + void setFillColor(Color color)
    + void rotate(double degrees)
    + void scale(double factor)
}
@enduml